# AI-Router

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  mypy.ini  pyproject.toml  ruff.toml
app/analyzers/: __init__.py  base.py  manager.py  models.py  registry.py  statistics.py
app/api/: models.py
app/config/: settings.py
app/context/: builder.py  formatter.py  models.py
app/core/: app.py  http.py  lifespan.py  logger.py
app/domain/: decision.py
app/exceptions/: handlers.py
app/middleware/: __init__.py  request_context.py  request_logging.py
app/providers/: __init__.py  base.py  config.py  exceptions.py  health.py  manager.py  models.py  ollama.py
app/router_engine/: __init__.py  capability.py  detector.py  engine.py  enums.py  model.py  registry.py  router.py  runtime.py  scorer.py  selection.py  selector.py
app/scanner/: __init__.py  base.py  factory.py  file.py  models.py  project.py  statistics.py
app/schemas/: chat.py  response.py
app/services/: __init__.py  chat.py  chat_service.py  scanner_service.py
config/: capabilities.yaml  models.yaml
docs/: Architecture.md  Roadmap.md  coding_rules.md
scripts/: format.bat  lint.bat  run.bat  test.bat
tests/: test_capability_detector.py  test_root_scanner_service.py  test_runtime.py  test_scorer.py
tests/analyzers/: test_manager.py  test_statistics_analyzer.py  test_statistics_manager.py
tests/providers/: test_discovery_service.py  test_ollama_connection.py  test_ollama_provider.py  test_provider_manager.py
tests/router_engine/: test_engine.py  test_router.py  (+2 more)
(+24 files in other folders)
